--- a/_posts/2023-11-01-Lurch2.md
+++ b/_posts/2023-11-01-Lurch2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Lurch2"
+title: "HOW TO CHANNEL CAR ANXIETY INTO FORWARD MOMENTUM"
 date: 2023-11-01
 categories: ["published", "lurch"]
 ---
