--- a/_posts/2023-11-01-Lurch2.md
+++ b/_posts/2023-11-01-Lurch2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "HOW TO CHANNEL CAR ANXIETY INTO FORWARD MOMENTUM"
-secrettitle: "beep"
+secrettitle: "![Headline of "HOW TO CHANNEL CAR ANXIETY INTO FORWARD MOMENTUM" as seen in Lurch Zine.](../assets/img/forward_momentum_headline.png)"
 date: 2023-11-01
 categories: ["published", "lurch"]
 ---
