--- a/_posts/2023-11-01-Lurch2.md
+++ b/_posts/2023-11-01-Lurch2.md
@@ -2,7 +2,7 @@
 layout: post
 title: "HOW TO CHANNEL CAR ANXIETY INTO FORWARD MOMENTUM"
 secrettitle: "hmmm"
-photo: ![Headline of HOW TO CHANNEL CAR ANXIETY INTO FORWARD MOMENTUM as seen in Lurch Zine.](/assets/img/forward_momentum_headline.png)
+image: /assets/img/forward_momentum_headline.png
 date: 2023-11-01
 categories: ["published", "lurch"]
 ---
