moving site radio

--- a/_posts/2023-03-17-Romance.md
+++ b/_posts/2023-03-17-Romance.md
@@ -5,7 +5,7 @@ secrettitle: "Pathos, 2023"
 image: /assets/img/romance_forest_headline.png
 imagealt: "Headline of THE ROMANCE OF THE FOREST as seen in Pathos Litmag."
 date: 2023-03-17
-categories: ["published", "pathos"]
+categories: [Publications]
 ---
 
 <!--- --->
