--- a/_posts/2023-03-17-Romance.md
+++ b/_posts/2023-03-17-Romance.md
@@ -8,5 +8,6 @@ date: 2023-03-17
 categories: [Publications]
 ---
 
-<!--- --->
-toad
+Read my piece in-magazine at <a href ="https://issuu.com/pathoslitmag/docs/pathos_winter_23_final/26">Pathos: _Winter '22/'23_</a>.
+
+<img src="/assets/img/romance_forest_full.png" alt="Full_Poem_Text" width="790">
