--- a/_posts/2023-03-17-Romance.md
+++ b/_posts/2023-03-17-Romance.md
@@ -5,7 +5,6 @@ secrettitle: "Pathos, 2023"
 imagehead: /assets/img/romance_forest_headline.png
 headalt: "Headline of THE ROMANCE OF THE FOREST as seen in Pathos Litmag, 22'/23'."
 date: 2023-03-17
-imagealt: "THE ROMANCE OF THE FOREST as seen in Pathos Litmag, 22'/23'."
 categories: [Publications]
 ---
 
@@ -13,4 +12,4 @@ Read my piece in <a href ="https://issuu.com/pathoslitmag/docs/pathos_winter_23_
 
 <p>(or right here :D )</p>
 
-<img src="/assets/img/romance_forest_full.png" alt="{{post.imagealt}}" width="790">
+<img src="/assets/img/romance_forest_full.png" alt="THE-ROMANCE-OF-THE-FOREST-as-seen-in-Pathos-Litmag,-22'/23'." width="790">
