removed links to rejection sites

--- a/_posts/2023-11-01-Nostromo.md
+++ b/_posts/2023-11-01-Nostromo.md
@@ -18,19 +18,19 @@ This piece has previously been rejected by:
 
 ***
 
-<a href ="https://www.ekphrastic.net/">The Ekphrastic Review</a>
+The Ekphrastic Review
 
 >_We enjoyed your work and style but we seldom publish after cinema. Our ekphrastic focus is quite narrow for practical reasons, not because we don't love all the arts._
 
 ***
 
-<a href ="https://splitlipthemag.com/">Split Lip Magazine</a>
+Split Lip Magazine
 
 >_...it isn't a good fit for us at this time._
 
 ***
 
-<a href ="https://thegravityofthething.com/">The Gravity of the Thing</a>
+The Gravity of the Thing
 
 >_We are unable to accept your work at this time, but we certainly appreciate your writing and your interest in our journal._
 
