added some shid

--- a/_posts/2024-03-08-Warsaw1.md
+++ b/_posts/2024-03-08-Warsaw1.md
@@ -3,9 +3,9 @@ layout: post
 title: "Warsaw 1"
 secrettitle: "Pathos, 2024"
 imagehead: /assets/img/warsaw1_headline.png
-headalt: "Headline of Warsaw 1 as seen in Pathos Litmag, Winter 23'/24'."
+headalt: "Headline of 'Warsaw 1' as seen in Pathos Litmag, Winter 23'/24'."
 date: 2024-03-08
 categories: [Publications]
 ---
 
-<img src="/assets/img/warsaw1_full.png" alt="THE-ROMANCE-OF-THE-FOREST-as-seen-in-Pathos-Litmag,-22'/23'." width="790">
+<img src="/assets/img/warsaw1_full.png" alt="'Warsaw-1'-as-seen-in-Pathos-Litmag,-Winter-23'/24'." width="790">
