added pics right

--- a/_posts/2025-01-17-ILMF1.md
+++ b/_posts/2025-01-17-ILMF1.md
@@ -12,12 +12,12 @@ One of my new years resolutions this year is to make (at least) one zine per mon
 
 This is my January zine, celebrating five of my close friends; Misha, Fox, Quinn, Jenny, and Camilo (+ a selfie) as characters in Gaia Online. Printed at the IPRC!
 
-<img src="/assets/img/imf1_cover.png" alt="Front-cover-of-I-Love-My-Friends-Part-One." width="790">
+<img src="/assets/img/ilmf1_cover.png" alt="Front-cover-of-I-Love-My-Friends-Part-One." width="790">
 
-<img src="/assets/img/imf1_foxandmisha.png" alt="Interior-of-I-Love-My-Friends-Part-One." width="790">
+<img src="/assets/img/ilmf1_foxandmisha.png" alt="Interior-of-I-Love-My-Friends-Part-One." width="790">
 
-<img src="/assets/img/imf1_quinnandjenny.png" alt="Interior-of-I-Love-My-Friends-Part-One." width="790">
+<img src="/assets/img/ilmf1_quinnandjenny.png" alt="Interior-of-I-Love-My-Friends-Part-One." width="790">
 
-<img src="/assets/img/imf1_camiloandmax.png" alt="Interior-of-I-Love-My-Friends-Part-One." width="790">
+<img src="/assets/img/ilmf1_camiloandmax.png" alt="Interior-of-I-Love-My-Friends-Part-One." width="790">
 
-<img src="/assets/img/imf1_back.png" alt="Back-cover-of-I-Love-My-Friends-Part-One." width="790">
+<img src="/assets/img/ilmf1_back.png" alt="Back-cover-of-I-Love-My-Friends-Part-One." width="790">
