Zines category completed!

--- a/_posts/2025-01-17-ILMF1.md
+++ b/_posts/2025-01-17-ILMF1.md
@@ -5,7 +5,7 @@ secrettitle: "January Zine, 2025"
 imagehead: /assets/img/ilmf1_headline.png
 headalt: "Headline of I Love My Friends Part-One."
 date: 2025-01-17
-categories: [Publications]
+categories: [Zines]
 ---
 
 One of my new years resolutions this year is to make (at least) one zine per month. I'm inspired by my friends Heather, Anthi, and Emma (@hmarswrites, @ansklaven, and @emma.krall on instagram) who seem to all constantly be making little books/zines, and never lack copies to distribute. I wanna be like them!!
