--- a/_posts/2026-01-01-Backseat.md
+++ b/_posts/2026-01-01-Backseat.md
@@ -10,6 +10,8 @@ categories: [Zines]
 
 Printed at the IPRC!
 
+Placeholder Text!
+
 <img src="/assets/img/backseat_girl/bg1.png" alt="Front cover of Backseat Girl." width="790">
 
 <img src="/assets/img/backseat_girl/bg2.png" alt="Pages 1 and 2 of Backseat Girl." width="790">
