--- a/_posts/2026-01-01-Backseat.md
+++ b/_posts/2026-01-01-Backseat.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Backseat Girl"
 secrettitle: "January, 2026"
-imagehead: /assets/img/softer_skin.png
+imagehead: /assets/img/backseat_girl_headline.png
 headalt: "Headline of Backseat Girl."
 date: 2026-01-01
 categories: [Zines]
